--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             gap: 8px;
             border-right: 2px solid #ccc;
             overflow-y: auto;
+            overflow-x: hidden;
             z-index: 100;
             flex-shrink: 0;
         }
@@ -50,6 +51,7 @@
             border-radius: 6px;
             padding: 8px;
             border: 1px solid #ddd;
+            overflow: hidden;
         }
 
         .tool-section h3 {
@@ -125,26 +127,68 @@
         .slider-row {
             display: flex;
             align-items: center;
-            gap: 6px;
+            gap: 4px;
             margin-top: 6px;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .slider-row label {
             font-size: 10px;
             color: #666;
-            min-width: 50px;
+            width: 32px;
+            flex-shrink: 0;
         }
 
         .slider-row input[type="range"] {
             flex: 1;
+            min-width: 0;
             cursor: pointer;
-            height: 6px;
+            height: 4px;
+            -webkit-appearance: none;
+            appearance: none;
+            background: #ddd;
+            border-radius: 2px;
+            outline: none;
+        }
+
+        .slider-row input[type="range"]::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 14px;
+            height: 14px;
+            border-radius: 50%;
+            background: #1976D2;
+            cursor: grab;
+            border: 1px solid white;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.3);
+        }
+
+        .slider-row input[type="range"]::-webkit-slider-thumb:active {
+            cursor: grabbing;
+            background: #1565C0;
+        }
+
+        .slider-row input[type="range"]::-moz-range-thumb {
+            width: 14px;
+            height: 14px;
+            border-radius: 50%;
+            background: #1976D2;
+            cursor: grab;
+            border: 1px solid white;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.3);
+        }
+
+        .slider-row input[type="range"]::-moz-range-thumb:active {
+            cursor: grabbing;
+            background: #1565C0;
         }
 
         .slider-row .val {
             font-size: 10px;
             color: #666;
-            min-width: 30px;
+            width: 24px;
+            flex-shrink: 0;
             text-align: right;
         }
 
@@ -584,8 +628,8 @@
             </div>
             <div class="slider-row">
                 <label>Range</label>
-                <input type="range" id="fovRange" min="50" max="300" value="120">
-                <span class="val" id="fovRangeVal">120</span>
+                <input type="range" id="fovRange" min="50" max="600" value="150">
+                <span class="val" id="fovRangeVal">150</span>
             </div>
             <div style="margin-top: 6px; font-size: 10px; color: #666;">
                 <kbd style="background:#eee; padding:2px 5px; border-radius:3px; border:1px solid #ccc;">R</kbd> rotate selected · 
@@ -704,7 +748,7 @@
             showFOV: true,
             gridSize: 30,
             fovAngle: 90,
-            fovRange: 120,
+            fovRange: 150,
             doorSwing: 'in-left',
 
             // Canvas transform
@@ -773,10 +817,10 @@
                     {"id": 6, "type": "door-closed", "x1": 250, "y1": 280, "x2": 250, "y2": 340, "swing": "in-right"},
                     {"id": 7, "type": "wall", "x1": 250, "y1": 340, "x2": 250, "y2": 400},
                     {"id": 8, "type": "door-closed", "x1": 100, "y1": 220, "x2": 100, "y2": 280, "swing": "in-right"},
-                    {"id": 10, "type": "threat", "x": 340, "y": 200, "direction": 3.14, "fovAngle": 60, "fovRange": 100, "path": []},
+                    {"id": 10, "type": "threat", "x": 340, "y": 200, "direction": 3.14, "fovAngle": 60, "fovRange": 180, "path": []},
                     {"id": 11, "type": "civilian", "x": 340, "y": 340, "direction": 3.14, "path": []},
-                    {"id": 12, "type": "operator", "x": 50, "y": 250, "color": "#388E3C", "label": "1", "direction": 0, "fovAngle": 90, "fovRange": 120, "path": []},
-                    {"id": 13, "type": "operator", "x": 50, "y": 300, "color": "#1976D2", "label": "2", "direction": 0, "fovAngle": 90, "fovRange": 120, "path": []}
+                    {"id": 12, "type": "operator", "x": 50, "y": 250, "color": "#388E3C", "label": "1", "direction": 0, "fovAngle": 90, "fovRange": 200, "path": []},
+                    {"id": 13, "type": "operator", "x": 50, "y": 300, "color": "#1976D2", "label": "2", "direction": 0, "fovAngle": 90, "fovRange": 200, "path": []}
                 ],
                 "drawings": []
             },
@@ -794,10 +838,10 @@
                     {"id": 9, "type": "wall", "x1": 280, "y1": 250, "x2": 280, "y2": 350},
                     {"id": 10, "type": "door-closed", "x1": 280, "y1": 350, "x2": 280, "y2": 250, "swing": "in-left"},
                     {"id": 11, "type": "wall", "x1": 350, "y1": 250, "x2": 350, "y2": 350},
-                    {"id": 12, "type": "threat", "x": 420, "y": 300, "direction": 3.14, "fovAngle": 70, "fovRange": 100, "path": []},
-                    {"id": 13, "type": "threat", "x": 150, "y": 450, "direction": -1.57, "fovAngle": 60, "fovRange": 80, "path": []},
-                    {"id": 14, "type": "operator", "x": 150, "y": 130, "color": "#388E3C", "label": "1", "direction": 1.57, "fovAngle": 90, "fovRange": 120, "path": []},
-                    {"id": 15, "type": "operator", "x": 120, "y": 130, "color": "#1976D2", "label": "2", "direction": 1.57, "fovAngle": 90, "fovRange": 120, "path": []}
+                    {"id": 12, "type": "threat", "x": 420, "y": 300, "direction": 3.14, "fovAngle": 70, "fovRange": 180, "path": []},
+                    {"id": 13, "type": "threat", "x": 150, "y": 450, "direction": -1.57, "fovAngle": 60, "fovRange": 150, "path": []},
+                    {"id": 14, "type": "operator", "x": 150, "y": 130, "color": "#388E3C", "label": "1", "direction": 1.57, "fovAngle": 90, "fovRange": 200, "path": []},
+                    {"id": 15, "type": "operator", "x": 120, "y": 130, "color": "#1976D2", "label": "2", "direction": 1.57, "fovAngle": 90, "fovRange": 200, "path": []}
                 ],
                 "drawings": []
             },
@@ -818,13 +862,13 @@
                     {"id": 12, "type": "door-closed", "x1": 100, "y1": 200, "x2": 100, "y2": 260, "swing": "in-right"},
                     {"id": 13, "type": "wall", "x1": 250, "y1": 300, "x2": 350, "y2": 300},
                     {"id": 14, "type": "door-closed", "x1": 280, "y1": 300, "x2": 320, "y2": 300, "swing": "in-left"},
-                    {"id": 15, "type": "threat", "x": 300, "y": 150, "direction": 3.14, "fovAngle": 80, "fovRange": 100, "path": []},
-                    {"id": 16, "type": "threat", "x": 420, "y": 200, "direction": 2.5, "fovAngle": 60, "fovRange": 90, "path": []},
+                    {"id": 15, "type": "threat", "x": 300, "y": 150, "direction": 3.14, "fovAngle": 80, "fovRange": 180, "path": []},
+                    {"id": 16, "type": "threat", "x": 420, "y": 200, "direction": 2.5, "fovAngle": 60, "fovRange": 160, "path": []},
                     {"id": 17, "type": "civilian", "x": 420, "y": 350, "direction": 1.57, "path": []},
                     {"id": 18, "type": "civilian", "x": 450, "y": 350, "direction": 1.57, "path": []},
-                    {"id": 19, "type": "operator", "x": 50, "y": 220, "color": "#388E3C", "label": "1", "direction": 0, "fovAngle": 90, "fovRange": 120, "path": []},
-                    {"id": 20, "type": "operator", "x": 50, "y": 250, "color": "#1976D2", "label": "2", "direction": 0, "fovAngle": 90, "fovRange": 120, "path": []},
-                    {"id": 21, "type": "operator", "x": 50, "y": 280, "color": "#F57C00", "label": "3", "direction": 0, "fovAngle": 90, "fovRange": 120, "path": []}
+                    {"id": 19, "type": "operator", "x": 50, "y": 220, "color": "#388E3C", "label": "1", "direction": 0, "fovAngle": 90, "fovRange": 200, "path": []},
+                    {"id": 20, "type": "operator", "x": 50, "y": 250, "color": "#1976D2", "label": "2", "direction": 0, "fovAngle": 90, "fovRange": 200, "path": []},
+                    {"id": 21, "type": "operator", "x": 50, "y": 280, "color": "#F57C00", "label": "3", "direction": 0, "fovAngle": 90, "fovRange": 200, "path": []}
                 ],
                 "drawings": []
             },
@@ -848,14 +892,14 @@
                     {"id": 15, "type": "wall", "x1": 450, "y1": 320, "x2": 450, "y2": 420},
                     {"id": 16, "type": "wall", "x1": 450, "y1": 320, "x2": 520, "y2": 320},
                     {"id": 17, "type": "door-open", "x1": 50, "y1": 220, "x2": 50, "y2": 280, "swing": "in-right"},
-                    {"id": 18, "type": "threat", "x": 180, "y": 160, "direction": 0.5, "fovAngle": 70, "fovRange": 100, "path": []},
-                    {"id": 19, "type": "threat", "x": 340, "y": 200, "direction": 3.5, "fovAngle": 60, "fovRange": 90, "path": []},
-                    {"id": 20, "type": "threat", "x": 340, "y": 350, "direction": 2.5, "fovAngle": 70, "fovRange": 100, "path": []},
-                    {"id": 21, "type": "threat", "x": 480, "y": 250, "direction": 3.14, "fovAngle": 80, "fovRange": 110, "path": []},
-                    {"id": 22, "type": "operator", "x": 20, "y": 230, "color": "#388E3C", "label": "1", "direction": 0, "fovAngle": 90, "fovRange": 120, "path": []},
-                    {"id": 23, "type": "operator", "x": 20, "y": 260, "color": "#1976D2", "label": "2", "direction": 0, "fovAngle": 90, "fovRange": 120, "path": []},
-                    {"id": 24, "type": "operator", "x": 20, "y": 290, "color": "#F57C00", "label": "3", "direction": 0, "fovAngle": 90, "fovRange": 120, "path": []},
-                    {"id": 25, "type": "operator", "x": 20, "y": 320, "color": "#7B1FA2", "label": "4", "direction": 0, "fovAngle": 90, "fovRange": 120, "path": []}
+                    {"id": 18, "type": "threat", "x": 180, "y": 160, "direction": 0.5, "fovAngle": 70, "fovRange": 180, "path": []},
+                    {"id": 19, "type": "threat", "x": 340, "y": 200, "direction": 3.5, "fovAngle": 60, "fovRange": 160, "path": []},
+                    {"id": 20, "type": "threat", "x": 340, "y": 350, "direction": 2.5, "fovAngle": 70, "fovRange": 180, "path": []},
+                    {"id": 21, "type": "threat", "x": 480, "y": 250, "direction": 3.14, "fovAngle": 80, "fovRange": 190, "path": []},
+                    {"id": 22, "type": "operator", "x": 20, "y": 230, "color": "#388E3C", "label": "1", "direction": 0, "fovAngle": 90, "fovRange": 200, "path": []},
+                    {"id": 23, "type": "operator", "x": 20, "y": 260, "color": "#1976D2", "label": "2", "direction": 0, "fovAngle": 90, "fovRange": 200, "path": []},
+                    {"id": 24, "type": "operator", "x": 20, "y": 290, "color": "#F57C00", "label": "3", "direction": 0, "fovAngle": 90, "fovRange": 200, "path": []},
+                    {"id": 25, "type": "operator", "x": 20, "y": 320, "color": "#7B1FA2", "label": "4", "direction": 0, "fovAngle": 90, "fovRange": 200, "path": []}
                 ],
                 "drawings": []
             },
@@ -877,19 +921,19 @@
                     {"id": 13, "type": "door-closed", "x1": 150, "y1": 340, "x2": 150, "y2": 400, "swing": "in-right"},
                     {"id": 14, "type": "door-closed", "x1": 250, "y1": 200, "x2": 310, "y2": 200, "swing": "out-left"},
                     {"id": 15, "type": "door-open", "x1": 50, "y1": 350, "x2": 50, "y2": 420, "swing": "in-right"},
-                    {"id": 16, "type": "threat", "x": 300, "y": 140, "direction": 1.57, "fovAngle": 90, "fovRange": 100, "path": []},
-                    {"id": 17, "type": "threat", "x": 530, "y": 350, "direction": 3.14, "fovAngle": 70, "fovRange": 90, "path": []},
-                    {"id": 18, "type": "threat", "x": 250, "y": 350, "direction": 0, "fovAngle": 60, "fovRange": 80, "path": []},
+                    {"id": 16, "type": "threat", "x": 300, "y": 140, "direction": 1.57, "fovAngle": 90, "fovRange": 180, "path": []},
+                    {"id": 17, "type": "threat", "x": 530, "y": 350, "direction": 3.14, "fovAngle": 70, "fovRange": 160, "path": []},
+                    {"id": 18, "type": "threat", "x": 250, "y": 350, "direction": 0, "fovAngle": 60, "fovRange": 150, "path": []},
                     {"id": 19, "type": "civilian", "x": 280, "y": 240, "direction": 1.57, "path": []},
                     {"id": 20, "type": "civilian", "x": 310, "y": 240, "direction": 1.57, "path": []},
                     {"id": 21, "type": "civilian", "x": 340, "y": 240, "direction": 1.57, "path": []},
                     {"id": 22, "type": "civilian", "x": 370, "y": 240, "direction": 1.57, "path": []},
                     {"id": 23, "type": "civilian", "x": 100, "y": 350, "direction": 0, "path": []},
                     {"id": 24, "type": "civilian", "x": 100, "y": 380, "direction": 0, "path": []},
-                    {"id": 25, "type": "operator", "x": 20, "y": 370, "color": "#388E3C", "label": "1", "direction": 0, "fovAngle": 90, "fovRange": 120, "path": []},
-                    {"id": 26, "type": "operator", "x": 20, "y": 400, "color": "#1976D2", "label": "2", "direction": 0, "fovAngle": 90, "fovRange": 120, "path": []},
-                    {"id": 27, "type": "operator", "x": 20, "y": 430, "color": "#F57C00", "label": "3", "direction": 0, "fovAngle": 90, "fovRange": 120, "path": []},
-                    {"id": 28, "type": "operator", "x": 20, "y": 340, "color": "#7B1FA2", "label": "4", "direction": 0, "fovAngle": 90, "fovRange": 120, "path": []}
+                    {"id": 25, "type": "operator", "x": 20, "y": 370, "color": "#388E3C", "label": "1", "direction": 0, "fovAngle": 90, "fovRange": 200, "path": []},
+                    {"id": 26, "type": "operator", "x": 20, "y": 400, "color": "#1976D2", "label": "2", "direction": 0, "fovAngle": 90, "fovRange": 200, "path": []},
+                    {"id": 27, "type": "operator", "x": 20, "y": 430, "color": "#F57C00", "label": "3", "direction": 0, "fovAngle": 90, "fovRange": 200, "path": []},
+                    {"id": 28, "type": "operator", "x": 20, "y": 340, "color": "#7B1FA2", "label": "4", "direction": 0, "fovAngle": 90, "fovRange": 200, "path": []}
                 ],
                 "drawings": []
             }
